--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 language: java
 jdk:
   - openjdk14
+before_install:
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  - docker pull openjdk:14-alpine
+
 script:
   - ./mvnw clean install
+  - ./mvnw deploy jib:build -P deploy-docker
